 syntax = "proto3";
package pb;
import "message.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

service WorkersScheduling{
  //心跳
  rpc Ping(PingRequest)returns(PingResponse){
    option (google.api.http) = {
      post: "/api/v1/work/ping"
      body: "*"
    };
  }
  //发现任务
  rpc FoundTask(FoundTaskRequest)returns(FoundTaskResponse){
    option (google.api.http) = {
      post: "/api/v1/work/found"
      body: "*"
    };
  }
  //拉取任务
  rpc PullTask(PullTaskRequest)returns(PullTaskResponse){
    option (google.api.http) = {
      post: "/api/v1/work/pull"
      body: "*"
    };
  }
  //完成任务
  rpc CompleteSubTask(CompleteSubTaskRequest)returns(CompleteSubTaskResponse){
    option (google.api.http) = {
      post: "/api/v1/work/pull"
      body: "*"
    };
  }
}
message FoundTaskRequest{
  string tag = 1;
  int32 size = 2;
  int32 page = 3;
  string sort = 4; //default:"create_time desc"
}
message FoundTaskResponse{
  int32 total = 1;
  repeated Task tasks = 2;
}
message PingRequest{
  Worker worker = 1;
}
message PingResponse{
  CommonResult result = 255;
}
message PullTaskRequest{
  Worker worker = 1;
  string task_id = 2;
}
message PullTaskResponse{
  SubTask sub_task = 1;
  CommonResult result = 255;
}
message CompleteSubTaskRequest{
  string sub_task_id = 1;
}
message CompleteSubTaskResponse{
  CommonResult result = 255;
}